--- a/part2_hls4ml.ipynb
+++ b/part2_hls4ml.ipynb
@@ -63,7 +63,7 @@
     "autoencoder = tf.keras.models.load_model('baseline_ae.h5')\n",
     "\n",
     "# Then the compressed model:\n",
-    "q_autoencoder = tf.keras.models.load_model('compressed_ae.h5', custom_objects=co)"
+    "q_autoencoder = tf.keras.models.load_model('qkeras_ae.h5', custom_objects=co)"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "hls_model = hls4ml.converters.convert_from_keras_model(autoencoder,\n",
     "                                                         hls_config=config,\n",
     "                                                         backend='VivadoAccelerator', #You need this backend to generate firmware for Zynq\n",
-    "                                                         output_dir='/mnt/data/thaarres/baseline_ae_pynq',\n",
+    "                                                         output_dir='baseline_ae_pynq',\n",
     "                                                         board='pynq-z2') # This is our FPGA!\n",
     "                                                   \n",
     "hls_model.compile()\n",
@@ -91,7 +91,7 @@
     "hls4ml.templates.VivadoAcceleratorBackend.make_bitfile(hls_model)\n",
     "\n",
     "# Package the model and some test data to be moved over to the Pynq\n",
-    "util.package(hls_model, signal_test_data, y_hls4ml)\n",
+    "util.package(hls_model, signal_test_data, y_hls4ml,name=\"pynq_pack_baseline\")\n",
     "\n"
    ]
   },
@@ -109,14 +109,14 @@
     "q_hls_model = hls4ml.converters.convert_from_keras_model(q_autoencoder,\n",
     "                                                         hls_config=config,\n",
     "                                                         backend='VivadoAccelerator',\n",
-    "                                                         output_dir='/mnt/data/thaarres/qkeras_ae_pynq',\n",
+    "                                                         output_dir='qkeras_ae_pynq',\n",
     "                                                         board='pynq-z2')                                                \n",
     "q_hls_model.compile()\n",
     "\n",
     "y_q_hls4ml = q_hls_model.predict(np.ascontiguousarray(signal_test_data))\n",
     "q_hls_model.build(csim=False, synth=True, export=True)\n",
     "hls4ml.templates.VivadoAcceleratorBackend.make_bitfile(q_hls_model)\n",
-    "util.package(q_hls_model, signal_test_data, y_q_hls4ml)"
+    "util.package(q_hls_model, signal_test_data, y_q_hls4ml,name=\"pynq_pack_qkeras)"
    ]
   },
   {
@@ -124,49 +124,84 @@
    "metadata": {},
    "source": [
     "We made it and have our bit file! From the synthesis reports we can check how many resoures each network is consuming as well as the total latency.\n",
-    "We can get the latency from the C synthesis report in `qkeras_ae/myproject_prj/solution1/syn/report/myproject_csynth.rpt` and the resource consumption from `qkeras_ae/util.rpt'\n",
+    "We can get the latency from the C synthesis report in `qkeras_ae/myproject_prj/solution1/syn/report/myproject_csynth.rpt` and the resource consumption from `qkeras_ae/util.rpt`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
     "\n",
-    "### Baseline model\n",
-    "\n",
-    "```\n",
-    "+ Latency (from myproject_csynth.rpt) : \n",
-    "    * Summary: \n",
-    "    +---------+---------+----------+----------+-----+-----+----------+\n",
-    "    |  Latency (cycles) |  Latency (absolute) |  Interval | Pipeline |\n",
-    "    |   min   |   max   |    min   |    max   | min | max |   Type   |\n",
-    "    +---------+---------+----------+----------+-----+-----+----------+\n",
-    "    |      525|      531| 3.702 us | 3.744 us |   64|   64| dataflow |\n",
-    "    +---------+---------+----------+----------+-----+-----+----------+\n",
-    "\n",
-    "+ Utilization (from util.rpt) : \n",
-    "    * Summary:    \n",
-    "+---------------+---------------+-----------+-------------+---------------+------------+----------+------------\n",
-    "|   Total LUTs  |   Logic LUTs  |  LUTRAMs  |     SRLs    |      FFs      |   RAMB36   |  RAMB18  |  DSP Blocks\n",
-    "+---------------+---------------+-----------+-------------+---------------+------------+----------+------------\n",
-    "| 38533(72.43%) | 37501(70.49%) | 22(0.13%) | 1010(5.80%) | 50970(47.90%) | 32(22.86%) | 5(1.79%) | 208(94.55%)\n",
+    "def getReports(indir):\n",
     "    \n",
-    " ```\n",
+    "    data_ = {}\n",
+    "    \n",
+    "    report_vsynth = Path('{}/vivado_synth.rpt'.format(indir))\n",
+    "    report_csynth = Path('{}/myproject_prj/solution1/syn/report/myproject_csynth.rpt'.format(indir))\n",
+    "    report_pynq = Path('{}/util.rpt'.format(indir))\n",
     "\n",
-    "### Quantized and pruned model:\n",
-    "```\n",
-    "+ Latency (from myproject_csynth.rpt) : \n",
-    "    * Summary: \n",
-    "    +---------+---------+----------+----------+-----+-----+----------+\n",
-    "    |  Latency (cycles) |  Latency (absolute) |  Interval | Pipeline |\n",
-    "    |   min   |   max   |    min   |    max   | min | max |   Type   |\n",
-    "    +---------+---------+----------+----------+-----+-----+----------+\n",
-    "    |      507|      513| 3.575 us | 3.617 us |   64|   64| dataflow |\n",
-    "    +---------+---------+----------+----------+-----+-----+----------+\n",
-    " \n",
-    " + Utilization (from util.rpt) : \n",
-    "    * Summary: \n",
-    "+---------------+---------------+-----------+------------+---------------+------------+----------+-------------\n",
-    "|   Total LUTs  |   Logic LUTs  |  LUTRAMs  |    SRLs    |      FFs      |   RAMB36   |  RAMB18  |  DSP Blocks \n",
-    "+---------------+---------------+-----------+------------+---------------+------------+----------+-------------\n",
-    "| 36309(68.25%) | 36053(67.77%) | 22(0.13%) | 234(1.34%) | 45152(42.44%) | 28(20.00%) | 3(1.07%) | 112(50.91%) \n",
+    "    if report_csynth.is_file():    \n",
+    "        with report_csynth.open() as report:\n",
+    "          lines = np.array(report.readlines())\n",
+    "          lat_line = lines[np.argwhere(np.array(['Latency (cycles)' in line for line in lines])).flatten()[0] + 3]\n",
+    "          #data_['latency_clks'] = round(int(lat_line.split('|')[2]))\n",
+    "          data_['Latency']   = lat_line.split('|')[4]\n",
+    "          data_['Initiation Interval']   = round(int(lat_line.split('|')[6]))\n",
+    "    \n",
     "\n",
-    "```\n",
+    "    if report_vsynth.is_file():\n",
+    "        # Get the resources from the logic synthesis report \n",
+    "        with report_vsynth.open() as report:\n",
+    "          lines = np.array(report.readlines())\n",
+    "          lut   = int(lines[np.array(['CLB LUTs*' in line for line in lines])][0].split('|')[2])\n",
+    "          ff    = int(lines[np.array(['CLB Registers' in line for line in lines])][0].split('|')[2])\n",
+    "          bram  = float(lines[np.array(['Block RAM Tile' in line for line in lines])][0].split('|')[2])\n",
+    "          dsp   = int(lines[np.array(['DSPs' in line for line in lines])][0].split('|')[2])\n",
+    "          lut_rel = round(float(lines[np.array(['CLB LUTs*' in line for line in lines])][0].split('|')[5]),1)\n",
+    "          ff_rel  = round(float(lines[np.array(['CLB Registers' in line for line in lines])][0].split('|')[5]),1)\n",
+    "          bram_rel= round(float(lines[np.array(['Block RAM Tile' in line for line in lines])][0].split('|')[5]),1)\n",
+    "          dsp_rel = round(float(lines[np.array(['DSPs' in line for line in lines])][0].split('|')[5]),1)\n",
+    "        \n",
+    "          data_['LUTs']     = \"{} ({}%)\".format(lut  ,lut_rel )\n",
+    "          data_['FFs']      = \"{} ({}%)\".format(ff   ,ff_rel  )\n",
+    "          data_['BRAMs']    = \"{} ({}%)\".format(bram ,bram_rel)\n",
+    "          data_['DSPs']     = \"{} ({}%)\".format(dsp  ,dsp_rel )    \n",
+    "          \n",
+    "    else:        \n",
+    "        # Get the resources from the logic synthesis report \n",
+    "        with report_pynq.open() as report:\n",
+    "          lines = np.array(report.readlines())\n",
+    "          top_line = lines[np.argwhere(np.array(['(top)' in line for line in lines])).flatten()[0]]\n",
+    "          data_['Total LUTs']   = (top_line.split('|')[3])\n",
+    "          data_['Logic LUTs']   = (top_line.split('|')[4])\n",
+    "          data_['LUTRAMs']   = (top_line.split('|')[5])\n",
+    "          data_['SRLs']   = (top_line.split('|')[6])\n",
+    "          data_['FFs']   = (top_line.split('|')[7])\n",
+    "          data_['RAMB36']   = (top_line.split('|')[8])\n",
+    "          data_['RAMB18']   = (top_line.split('|')[9])\n",
+    "          data_['DSP Blocks']   = (top_line.split('|')[10])\n",
+    "    \n",
+    "    return data_\n",
     "\n",
+    "data_baseline = getReports('baseline_ae_pynq')\n",
+    "data_qkeras = getReports('qkeras_ae_pynq')\n",
+    "\n",
+    "print(\"\\n ON PYNQ\")\n",
+    "print(\"\\n BASELINE MODEL \\n\")\n",
+    "for key in data_baseline.keys():\n",
+    "    print(\"{} = {}\".format(key,data_baseline[key]))\n",
+    "print(\"\\n QKERAS MODEL \\n\")\n",
+    "for key in data_qkeras.keys():\n",
+    "    print(\"{} = {}\".format(key,data_qkeras[key]))   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So we see that, despite having the same latency, the resource constumption for the compressed model is significantly smaller! That in turn means that we don't need to reuse the same multipliers as many times as we have defined (by setting reuse to 64). So quantization can improve the latency, in terms of allowing us to use a *lower reuse factor*."
    ]
   },
@@ -203,7 +238,7 @@
     "    config['LayerName'][layer]['ReuseFactor'] = 1 #Use the same resources multiple times. This is neccessary in this case because the FPGA is small.\n",
     "hls_model = hls4ml.converters.convert_from_keras_model(autoencoder,\n",
     "                                                         hls_config=config,\n",
-    "                                                         output_dir='/mnt/data/thaarres/baseline_ae_vu9p',\n",
+    "                                                         output_dir='baseline_ae_vu9p',\n",
     "                                                         part='xcvu9p-flgb2104-2l-e') # L1T FPGA!\n",
     "                                                   \n",
     "hls_model.compile()\n",
@@ -217,7 +252,7 @@
     "    config['LayerName'][layer]['ReuseFactor'] = 1 #Use the same resources multiple times. This is neccessary in this case because the FPGA is small.\n",
     "q_hls_model = hls4ml.converters.convert_from_keras_model(q_autoencoder,\n",
     "                                                         hls_config=config,\n",
-    "                                                         output_dir='/mnt/data/thaarres/qkeras_ae_vu9p',\n",
+    "                                                         output_dir='qkeras_ae_vu9p',\n",
     "                                                         part='xcvu9p-flgb2104-2l-e') # L1T FPGA!\n",
     "\n",
     "q_hls_model.compile()\n",
@@ -228,39 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The latency can still be found in `qkeras_ae_vu9p/myproject_prj/solution1/syn/report/myproject_csynth.rpt`, but the resources are now listed in `qkeras_ae_vu9p/vivado_synth.rpt':\n",
-    "\n",
-    "### Baseline model\n",
-    "```\n",
-    "+ Latency (from myproject_csynth.rpt) : \n",
-    "    * Summary: \n",
-    "    +---------+---------+-----------+-----------+-----+-----+----------+\n",
-    "    |  Latency (cycles) |   Latency (absolute)  |  Interval | Pipeline |\n",
-    "    |   min   |   max   |    min    |    max    | min | max |   Type   |\n",
-    "    +---------+---------+-----------+-----------+-----+-----+----------+\n",
-    "    |       17|       17| 85.000 ns | 85.000 ns |    1|    1| function |\n",
-    "    +---------+---------+-----------+-----------+-----+-----+----------+\n",
-    "\n",
-    "+ Utilization (from vivado_synth.rpt) : \n",
-    "    * Summary:  \n",
-    "    \n",
-    " ```\n",
-    "\n",
-    "### Quantized and pruned model:\n",
-    "```\n",
-    "+ Latency (from myproject_csynth.rpt) : \n",
-    "    * Summary: \n",
-    "    +---------+---------+-----------+-----------+-----+-----+----------+\n",
-    "    |  Latency (cycles) |   Latency (absolute)  |  Interval | Pipeline |\n",
-    "    |   min   |   max   |    min    |    max    | min | max |   Type   |\n",
-    "    +---------+---------+-----------+-----------+-----+-----+----------+\n",
-    "    |       14|       14| 70.000 ns | 70.000 ns |    1|    1| function |\n",
-    "    +---------+---------+-----------+-----------+-----+-----+----------+\n",
-    "    \n",
-    "+ Utilization (from vivado_synth.rpt) : \n",
-    "    * Summary:      \n",
-    "\n",
-    "```"
+    "The latency can still be found in `qkeras_ae_vu9p/myproject_prj/solution1/syn/report/myproject_csynth.rpt`, but the resources are now listed in `qkeras_ae_vu9p/vivado_synth.rpt':"
    ]
   },
   {
@@ -268,7 +271,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_baseline = getReports('baseline_ae_vu9p')\n",
+    "data_qkeras = getReports('qkeras_ae_vu9p')\n",
+    "\n",
+    "print(\"\\n ON VU9+\")\n",
+    "print(\"\\n BASELINE MODEL \\n\")\n",
+    "for key in data_baseline.keys():\n",
+    "    print(\"{} = {}\".format(key,data_baseline[key]))\n",
+    "print(\"\\n QKERAS MODEL \\n\")\n",
+    "for key in data_qkeras.keys():\n",
+    "    print(\"{} = {}\".format(key,data_qkeras[key]))"
+   ]
   },
   {
    "cell_type": "markdown",
