--- a/part3_pynqz2.ipynb
+++ b/part3_pynqz2.ipynb
@@ -15,8 +15,8 @@
     "You're in!\n",
     "\n",
     "Now, we need to copy over a few things by pressing the `Upload` button and find:\n",
-    "- The two tarballs we made in the previous exercise \"baseline_ae_pynq_package.tar.gz\" and \"qkeras_ae_pynq_package.tar.gz\"\n",
-    "- The part3_pynqz2.ipynb notebook\n",
+    "- The two tarballs we made in the previous exercise \"pynq_pack_baseline.tar.gz\" and \"pynq_pack_qkeras.tar.gz\"\n",
+    "- This part3_pynqz2.ipynb notebook\n",
     "\n",
     "That's it!\n",
     "\n",
@@ -42,19 +42,18 @@
    "outputs": [],
    "source": [
     "# Extract the bitfile, driver and some test data\n",
-    "tar = tarfile.open(\"baseline_ae_pynq_package.tar.gz\")\n",
+    "tar = tarfile.open(\"pynq_pack_baseline.tar.gz\")\n",
     "tar.extractall()\n",
-    "\n",
-    "driver = [f for f in os.listdir('./baseline_ae_pynq_package/') if 'driver' in f][0]\n",
-    "shutil.copy(f'baseline_ae_pynq_package/{driver}', 'baseline_ae_pynq_package/hls4mlruntime.py')\n",
-    "os.chdir('baseline_ae_pynq_package')"
+    "shutil.move(\"package\",\"pynq_pack_baseline\")\n",
+    "driver = [f for f in os.listdir('./pynq_pack_baseline/') if 'driver' in f][0]\n",
+    "shutil.copy(f'pynq_pack_baseline/{driver}', 'pynq_pack_baseline/hls4mlruntime.py')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the hls4ml driver, it is super easy loading the network onto the Zynq Z2! We can also check the inference latency:"
+    "With the hls4ml driver, it is super easy loading the network onto the Zynq Z2! Let's load it over and do some inferences with the test signal file we also copied over! We can also check the inference latency:"
    ]
   },
   {
@@ -63,6 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir('pynq_pack_baseline')\n",
+    "\n",
     "from hls4mlruntime import NeuralNetworkOverlay\n",
     "\n",
     "bitfile = [f for f in os.listdir() if '.bit' in f][0]\n",
@@ -78,10 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool! The total latency per inference is roughly 0.5s/55969 ~ 9 microseconds. However, this includes data transfer and software overhead! SO the \"real\" latency is still the one we saw from the reports (3 micorseconds).\n",
+    "Cool! The total latency per inference is roughly 100 kHz, with a latency per sample of around 0.5s/55969 ~ 9 microseconds. So we would need 400 of these if we would want to run inference at the full LHC bunch srossing of 40 MHz! However, this includes data transfer and software overhead! So the \"real\" latency is still the one we saw from the reports (3 micorseconds).\n",
     "\n",
-    "In the L1T, the data comes from optical fibers whearas in the Pynq its stored in memory, also we dont have the same software overhead in the L1-trigger.\n",
-    "\n",
+    "In the L1T, the data comes from optical fibers whearas in the Pynq its stored in memory, so moving data bvack and forth takes a bit of time, also we dont have the same software overhead in the L1-trigger.\n",
     "\n",
     "Let's verify that the latency is roughly the same for the quantized model also on the board:"
    ]
@@ -93,15 +93,13 @@
    "outputs": [],
    "source": [
     "# Extract the bitfile, driver and some test data\n",
-    "os.chdir('../')  \n",
-    "tar = tarfile.open(\"qkeras_ae_pynq_package.tar.gz\")\n",
-    "tar.extractall()\n",
+    "os.chdir('/home/xilinx/jupyter_notebooks/')  \n",
     "\n",
-    "driver = [f for f in os.listdir('./qkeras_ae_pynq_package/') if 'driver' in f][0]\n",
-    "shutil.copy(f'qkeras_ae_pynq_package/{driver}', 'qkeras_ae_pynq_package/hls4mlruntime.py')\n",
-    "os.chdir('baseline_ae_pynq_package')   \n",
-    "files = os.listdir('.')\n",
-    "print(files)"
+    "tar = tarfile.open(\"pynq_pack_qkeras.tar.gz\")\n",
+    "tar.extractall()\n",
+    "shutil.move(\"package\",\"pynq_pack_qkeras\")\n",
+    "driver = [f for f in os.listdir('./pynq_pack_qkeras/') if 'driver' in f][0]\n",
+    "shutil.copy(f'pynq_pack_qkeras/{driver}', 'pynq_pack_qkeras/hls4mlruntime.py') "
    ]
   },
   {
@@ -110,6 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir('pynq_pack_qkeras')  \n",
+    "\n",
+    "from hls4mlruntime import NeuralNetworkOverlay\n",
+    "\n",
     "bitfile = [f for f in os.listdir() if '.bit' in f][0]\n",
     "\n",
     "X = np.load('X.npy').astype(np.float32)\n",
@@ -123,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For fun, let's also check out the true and reconstructed muon $p_{T}$ to convince ourselves that the model is on the board and doing... something? Note that we do not expected it to do something amazing, considering the latent dimension is 3!"
+    "For fun, let's also check out the true and reconstructed muon $p_{T}$ to convince ourselves that the model is on the board and doing... something? Note that we do not expected it to do something amazing, considering the tail we saw before when attemting to reconstruct the SM test data, and this is BSM data which the algorithm has never seen before and where we would like it to \"break down\""
    ]
   },
   {
@@ -134,18 +136,17 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, axs = plt.subplots(1,2,figsize=(8,5))\n",
-    "fig.suptitle('Kinematic distributions in test data versus reconstructed data')\n",
-    "\n",
-    "axs[0].hist(X[:,3],bins=100,label=r'Truth',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
-    "axs[0].hist(y_hw[:,3],bins=100,label=r'AE RECO',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
+    "fig, axs = plt.subplots(1,2,figsize=(16,8))\n",
+    "fig.suptitle('Real data versus reconsructed data')\n",
+    "axs[0].hist(X[:,],bins=100,label=r'Real data',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
+    "axs[0].hist(y_hw[:,3],bins=100,label=r'Predicted',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
     "# axs[0].semilogy()\n",
-    "axs[0].set(xlabel=u'Leading electron $p_{T}$ (GeV)', ylabel='A.U')\n",
+    "axs[0].set(xlabel=u'Leading e/$\\gamma$ $p_{T}$ ( Norm. GeV)', ylabel='A.U')\n",
     "axs[0].legend(loc='best',frameon=False, ncol=1,fontsize='large')\n",
     "\n",
-    "axs[1].hist(X[:,15],bins=100,label=r'Truth',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
-    "axs[1].hist(y_hw[:,15],bins=100,label=r'AE reco',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
-    "axs[1].set(xlabel=u'Leading muon $p_{T}$ (GeV)', ylabel='A.U')\n",
+    "axs[1].hist(X[:,15],bins=100,label=r'Real data',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
+    "axs[1].hist(y_hw[:,15],bins=100,label=r'Predicted',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
+    "axs[1].set(xlabel=u'Leading muon $p_{T}$ (Norm. GeV)', ylabel='A.U')\n",
     "# axs[1].semilogy()\n",
     "axs[1].legend(loc='best',frameon=False, ncol=1,fontsize='large')"
    ]
@@ -154,13 +155,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gross! This is definitely not a good generator. But we've also seen that the algorithms that reconstruct the data better, are not neccessarily the best anomaly detection algorithms. I'll leave it up to you to make it better :) "
+    "This is definitely not a good generator of BSM signals :)!. But obvisouly, the algorithms that reconstruct BSM data better, are not neccessarily the best anomaly detection algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You have now seen just how easy it has become to train a quantized and pruned deep neural network, translate it into FPGA firmware and do inference on a real FPGA! Methods like pruning and quantization-aware training has become crucial for edge applications, and deployment of highly parallel implementations of such models onto FPGAs has become significantly easier for non-experts withi librabries like hls4ml."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
