--- a/part3_pynqz2.ipynb
+++ b/part3_pynqz2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "<img src=\"images/pynq.png\" alt=\"pynq\" width=\"500\" img align=\"center\"/>\n",
     "\n",
-    "The first thing you have to do, is connect the board following [these instructions](https://pynq.readthedocs.io/en/latest/getting_started/pynq_z2_setup.html). I always connect it to a power source and then directly to my router, connect my computer to the WiFi on the same router, check which IP the pynq gets, then connect to the board in my browser with [http://<board IP address>](http://<board IP address>). You can also connect the board directly to your computer, but that honestly never worked for me on Mac. But please try by following the instructions on the link above! You will be prompted for a password, which is *xilinx*.\n",
+    "The first thing you have to do, is connect the board following [these instructions](https://pynq.readthedocs.io/en/latest/getting_started/pynq_z2_setup.html). I always connect it to a power source and then directly to my router, connect my computer to the WiFi on the same router, check which IP the pynq gets, then connect to the board in my browser with [http://<board IP address>](http://<board IP address>). You can also connect the board directly to your computer. You will be prompted for a password, which is *xilinx*.\n",
     "\n",
     "You're in!\n",
     "\n",
@@ -42,11 +42,14 @@
    "outputs": [],
    "source": [
     "# Extract the bitfile, driver and some test data\n",
-    "tar = tarfile.open(\"pynq_pack_baseline.tar.gz\")\n",
-    "tar.extractall()\n",
-    "shutil.move(\"package\",\"pynq_pack_baseline\")\n",
-    "driver = [f for f in os.listdir('./pynq_pack_baseline/') if 'driver' in f][0]\n",
-    "shutil.copy(f'pynq_pack_baseline/{driver}', 'pynq_pack_baseline/hls4mlruntime.py')"
+    "os.chdir('/home/xilinx/jupyter_notebooks/') \n",
+    "untar = False\n",
+    "if untar:\n",
+    "    tar = tarfile.open(\"pynq_pack_baseline.tar.gz\")\n",
+    "    tar.extractall()\n",
+    "    shutil.move(\"package\",\"pynq_pack_baseline\")\n",
+    "    driver = [f for f in os.listdir('./pynq_pack_baseline/') if 'driver' in f][0]\n",
+    "    shutil.copy(f'pynq_pack_baseline/{driver}', 'pynq_pack_baseline/hls4mlruntime.py')"
    ]
   },
   {
@@ -72,7 +75,10 @@
     "y_ref = np.load('y.npy').astype(np.float32)\n",
     "nn = NeuralNetworkOverlay(bitfile, X.shape, X.shape )\n",
     "y_hw, _, _ = nn.predict(X, X.shape, profile=True)\n",
-    "np.testing.assert_allclose(y_hw, y_ref)"
+    "\n",
+    "# check that the predicted value on the board is the same as the one we had before\n",
+    "np.testing.assert_allclose(y_hw, y_ref)\n",
+    "os.chdir('/home/xilinx/jupyter_notebooks/')  "
    ]
   },
   {
@@ -93,13 +99,12 @@
    "outputs": [],
    "source": [
     "# Extract the bitfile, driver and some test data\n",
-    "os.chdir('/home/xilinx/jupyter_notebooks/')  \n",
-    "\n",
-    "tar = tarfile.open(\"pynq_pack_qkeras.tar.gz\")\n",
-    "tar.extractall()\n",
-    "shutil.move(\"package\",\"pynq_pack_qkeras\")\n",
-    "driver = [f for f in os.listdir('./pynq_pack_qkeras/') if 'driver' in f][0]\n",
-    "shutil.copy(f'pynq_pack_qkeras/{driver}', 'pynq_pack_qkeras/hls4mlruntime.py') "
+    "if untar:\n",
+    "    tar = tarfile.open(\"pynq_pack_qkeras.tar.gz\")\n",
+    "    tar.extractall()\n",
+    "    shutil.move(\"package\",\"pynq_pack_qkeras\")\n",
+    "    driver = [f for f in os.listdir('./pynq_pack_qkeras/') if 'driver' in f][0]\n",
+    "    shutil.copy(f'pynq_pack_qkeras/{driver}', 'pynq_pack_qkeras/hls4mlruntime.py') "
    ]
   },
   {
@@ -155,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is definitely not a good generator of BSM signals :)!. But obvisouly, the algorithms that reconstruct BSM data better, are not neccessarily the best anomaly detection algorithms."
+    "This is definitely not a good generator of BSM signals :) But obvisouly, the algorithms that reconstruct BSM data better, are not neccessarily the best anomaly detection algorithms."
    ]
   },
   {
