--- a/part1_ADmodel.ipynb
+++ b/part1_ADmodel.ipynb
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "pHpj7cn6wEk5",
         "outputId": "d8e1ab19-ac04-4129-e556-3d2388d6d0e9",
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "CAQY2-qywEk7",
         "outputId": "6df701db-9c27-4ed5-d78a-554e5bf300c1",
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "JrCYeQyDwEk7"
       },
@@ -197,13 +197,12 @@
         "\n",
         "with h5py.File('Ato4l_dataset.h5', 'r') as file:\n",
         "    signal_test_data = np.array(file['Data'])\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "xutXs2OqwEk7",
         "outputId": "7d779755-8976-496e-ba89-49e2d6249166",
@@ -287,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "rBwFdeBfwEk8",
         "outputId": "dae31a04-febd-4a15-fbb4-86d9e71a39fd",
@@ -484,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "E8qk6D0pwEk8"
       },
@@ -507,7 +506,7 @@
       "execution_count": null,
       "metadata": {
         "id": "G6zN-PBnwEk8",
-        "outputId": "20813448-ee32-4904-bcb7-88674628e027",
+        "outputId": "b748ef02-6f10-4c4e-ef8e-639880e0884a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -643,7 +642,50 @@
             "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 10ms/step - loss: 0.2652 - val_loss: 0.2699 - learning_rate: 1.0000e-05\n",
             "Epoch 63/150\n",
             "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 9ms/step - loss: 0.2776 - val_loss: 0.2688 - learning_rate: 1.0000e-05\n",
-            "Epoch 64/150\n"
+            "Epoch 64/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 9ms/step - loss: 0.2730 - val_loss: 0.2687 - learning_rate: 1.0000e-05\n",
+            "Epoch 65/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 8ms/step - loss: 0.2667 - val_loss: 0.2694 - learning_rate: 1.0000e-05\n",
+            "Epoch 66/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 9ms/step - loss: 0.2594 - val_loss: 0.2685 - learning_rate: 1.0000e-05\n",
+            "Epoch 67/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 9ms/step - loss: 0.2693 - val_loss: 0.2684 - learning_rate: 1.0000e-05\n",
+            "Epoch 68/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 9ms/step - loss: 0.2696 - val_loss: 0.2670 - learning_rate: 1.0000e-05\n",
+            "Epoch 69/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 9ms/step - loss: 0.2839 - val_loss: 0.2658 - learning_rate: 1.0000e-05\n",
+            "Epoch 70/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 9ms/step - loss: 0.2774 - val_loss: 0.2660 - learning_rate: 1.0000e-05\n",
+            "Epoch 71/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 8ms/step - loss: 0.2606 - val_loss: 0.2655 - learning_rate: 1.0000e-05\n",
+            "Epoch 72/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 9ms/step - loss: 0.2637 - val_loss: 0.2659 - learning_rate: 1.0000e-05\n",
+            "Epoch 73/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 9ms/step - loss: 0.2620 - val_loss: 0.2641 - learning_rate: 1.0000e-05\n",
+            "Epoch 74/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 9ms/step - loss: 0.2668 - val_loss: 0.2635 - learning_rate: 1.0000e-05\n",
+            "Epoch 75/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 9ms/step - loss: 0.2786 - val_loss: 0.2627 - learning_rate: 1.0000e-05\n",
+            "Epoch 76/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 9ms/step - loss: 0.2688 - val_loss: 0.2633 - learning_rate: 1.0000e-05\n",
+            "Epoch 77/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 10ms/step - loss: 0.2577 - val_loss: 0.2623 - learning_rate: 1.0000e-05\n",
+            "Epoch 78/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 10ms/step - loss: 0.2581 - val_loss: 0.2623 - learning_rate: 1.0000e-05\n",
+            "Epoch 79/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 12ms/step - loss: 0.2620 - val_loss: 0.2609 - learning_rate: 1.0000e-05\n",
+            "Epoch 80/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 9ms/step - loss: 0.2434 - val_loss: 0.2603 - learning_rate: 1.0000e-05\n",
+            "Epoch 81/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 9ms/step - loss: 0.2685 - val_loss: 0.2598 - learning_rate: 1.0000e-05\n",
+            "Epoch 82/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 9ms/step - loss: 0.2764 - val_loss: 0.2595 - learning_rate: 1.0000e-05\n",
+            "Epoch 83/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 10ms/step - loss: 0.2513 - val_loss: 0.2604 - learning_rate: 1.0000e-05\n",
+            "Epoch 84/150\n",
+            "\u001b[1m2500/2500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 9ms/step - loss: 0.2510 - val_loss: 0.2590 - learning_rate: 1.0000e-05\n",
+            "Epoch 85/150\n",
+            "\u001b[1m 883/2500\u001b[0m \u001b[32m━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━\u001b[0m \u001b[1m11s\u001b[0m 7ms/step - loss: 0.2828"
           ]
         }
       ],
@@ -961,8 +1003,7 @@
         "    from qkeras.utils import _add_supported_quantized_objects\n",
         "    co = {}; _add_supported_quantized_objects(co)\n",
         "\n",
-        "    qp_autoencoder = tf.keras.models.load_model('qkeras_ae.h5',custom_objects=co)\n",
-        ""
+        "    qp_autoencoder = tf.keras.models.load_model('qkeras_ae.h5',custom_objects=co)\n"
       ]
     },
     {
@@ -1101,7 +1142,34 @@
         "\n",
         "- Plot the 2D latent space for signal and background\n",
         "\n",
-        "- Turn the AE into a VAE. Hints:"
+        "- Turn the AE into a VAE\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        ".......\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Here's how"
       ],
       "metadata": {
         "id": "InNeC2pfzDFW"
@@ -1138,8 +1206,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Encode test data to latent space\n",
-        "latent_representations = encoder.predict(X_test)\n",
+        "# Encode the test data to latent space\n",
         "latent_representations_b = encoder.predict(X_test)\n",
         "latent_representations_s = encoder.predict(signal_test_data)\n",
         "\n",
@@ -1155,6 +1222,108 @@
       ],
       "metadata": {
         "id": "OVPXSmB41Vjq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Go variational\n",
+        "Let's train a VAE too and compare the latent space!"
+      ],
+      "metadata": {
+        "id": "-c6lLKia5u4f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import Input, Dense, Lambda, BatchNormalization, LeakyReLU\n",
+        "from tensorflow.keras import backend as K\n",
+        "\n",
+        "# Dimensions\n",
+        "input_shape = 57\n",
+        "latent_dim = 2\n",
+        "\n",
+        "# Reparameterization trick\n",
+        "def sampling(args):\n",
+        "    z_mean, z_log_var = args\n",
+        "    epsilon = K.random_normal(shape=(K.shape(z_mean)[0], latent_dim), mean=0., stddev=1.)\n",
+        "    return z_mean + K.exp(0.5 * z_log_var) * epsilon\n",
+        "\n",
+        "# Input\n",
+        "inputArray = Input(shape=(input_shape,))\n",
+        "\n",
+        "# Encoder\n",
+        "x = Dense(32, kernel_initializer=tf.keras.initializers.HeUniform())(inputArray)\n",
+        "x = BatchNormalization()(x)\n",
+        "x = LeakyReLU(alpha=0.3)(x)\n",
+        "x = Dense(16, kernel_initializer=tf.keras.initializers.HeUniform())(x)\n",
+        "x = BatchNormalization()(x)\n",
+        "x = LeakyReLU(alpha=0.3)(x)\n",
+        "\n",
+        "# Bottleneck\n",
+        "z_mean = Dense(latent_dim, name=\"z_mean\")(x)\n",
+        "z_log_var = Dense(latent_dim, name=\"z_log_var\")(x)\n",
+        "z = Lambda(sampling, output_shape=(latent_dim,), name='z')([z_mean, z_log_var])\n",
+        "\n",
+        "# Decoder\n",
+        "decoder_input = Dense(16, kernel_initializer=tf.keras.initializers.HeUniform())(z)\n",
+        "decoder_input = BatchNormalization()(decoder_input)\n",
+        "decoder_input = LeakyReLU(alpha=0.3)(decoder_input)\n",
+        "decoder_input = Dense(32, kernel_initializer=tf.keras.initializers.HeUniform())(decoder_input)\n",
+        "decoder_input = BatchNormalization()(decoder_input)\n",
+        "decoder_input = LeakyReLU(alpha=0.3)(decoder_input)\n",
+        "output = Dense(input_shape, kernel_initializer=tf.keras.initializers.HeUniform())(decoder_input)\n",
+        "\n",
+        "# VAE model\n",
+        "vae = Model(inputArray, output, name=\"vae\")\n",
+        "\n",
+        "# Custom loss\n",
+        "reconstruction_loss = tf.keras.losses.mse(inputArray, output)\n",
+        "reconstruction_loss = tf.reduce_mean(reconstruction_loss) * input_shape\n",
+        "\n",
+        "kl_loss = -0.5 * tf.reduce_sum(1 + z_log_var - tf.square(z_mean) - tf.exp(z_log_var), axis=-1)\n",
+        "kl_loss = tf.reduce_mean(kl_loss)\n",
+        "\n",
+        "vae_loss = reconstruction_loss + kl_loss\n",
+        "vae.add_loss(vae_loss)\n",
+        "vae.compile(optimizer='adam')\n",
+        "\n",
+        "# Show model summary\n",
+        "vae.summary()\n",
+        "\n",
+        "# Save encoder model for latent space extraction\n",
+        "vae_encoder = Model(inputs=inputArray, outputs=z_mean, name=\"encoder\")  # use z if you want noisy samples\n"
+      ],
+      "metadata": {
+        "id": "id292QzG5zV8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Encode the test data to latent space\n",
+        "latent_representations_vae_b = vae_encoder.predict(X_test)\n",
+        "latent_representations_vae_s = vae_encoder.predict(signal_test_data)\n",
+        "\n",
+        "# Plot\n",
+        "plt.figure(figsize=(8,6))\n",
+        "plt.scatter(latent_representations_vae_b[:, 0], latent_representations_vae_b[:, 1], alpha=0.6, c='blue', edgecolor='k')\n",
+        "plt.scatter(latent_representations_vae_s[:, 0], latent_representations_vae_s[:, 1], alpha=0.6, c='red', edgecolor='k')\n",
+        "plt.xlabel(\"Latent Dimension 1\")\n",
+        "plt.ylabel(\"Latent Dimension 2\")\n",
+        "plt.grid(True)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "2svf_hIc7fQK"
       },
       "execution_count": null,
       "outputs": []
